implementei o gerador de pdus, mas preciso corrigir a forma que os sources são compilados

--- a/Sources/litgen-tg/Makefile
+++ b/Sources/litgen-tg/Makefile
@@ -5,11 +5,15 @@ EXTERNAL_INCLUDES = -I../libs/cpptools_0.1.0.0/include
 EXTERNAL_LDFLAGS = ../libs/cpptools_0.1.0.0/bin/libcpptools.a
 
 SRCDIR = src
+COMMONSDIR = ../commons/src
 INCDIR = include
+COMMONSINCLUDE = ../commons/include
 OBJDIR = obj
 BINDIR = bin
 
-SOURCES = $(wildcard $(SRCDIR)/*.cpp)
+#SOURCES = $(wildcard $(SRCDIR)/*.cpp)
+#OBJECTS = $(patsubst $(SRCDIR)/%.cpp,$(OBJDIR)/%.o,$(SOURCES))
+SOURCES = $(wildcard $(SRCDIR)/*.cpp) $(wildcard $(COMMONSDIR)/*.cpp)
 OBJECTS = $(patsubst $(SRCDIR)/%.cpp,$(OBJDIR)/%.o,$(SOURCES))
 EXECUTABLE = $(BINDIR)/litgen-tg.exe
 
@@ -20,9 +24,11 @@ $(EXECUTABLE): prebuild $(OBJECTS)
 	$(CC) $(OBJECTS) -o  $@ $(LDFLAGS) $(EXTERNAL_LDFLAGS)
 
 # build the objects
-$(OBJDIR)/%.o: $(SRCDIR)/%.cpp
-	$(CC) $(CFLAGS) $(EXTERNAL_INCLUDES) -I$(INCDIR) $< -o $@
+$(OBJDIR)/%.o: $(COMMONSDIR)/%.cpp
+	$(CC) $(CFLAGS) $(EXTERNAL_INCLUDES) -I$(INCDIR) -I$(COMMONSINCLUDE) $< -o $@
 
+$(OBJDIR)/%.o: $(SRCDIR)/%.cpp
+	$(CC) $(CFLAGS) $(EXTERNAL_INCLUDES) -I$(INCDIR) -I$(COMMONSINCLUDE) $< -o $@
 
 # any command to run before the build
 prebuild:
