--- a/Sources/.vscode/tasks.json
+++ b/Sources/.vscode/tasks.json
@@ -16,7 +16,7 @@
                 "${workspaceFolder}/litgen-model/src/*.cpp",
                 "${workspaceFolder}/libs/cpptools_0.1.0.0/bin/libcpptools.a",
                 "-o",
-                "${workspaceFolder}/bin/litgen-model.exe",
+                "${workspaceFolder}/bin/litgen-model.dbg.exe",
                 "-I${workspaceFolder}/libs/cpptools_0.1.0.0/include/",
                 "-I${workspaceFolder}/commons/include/",
                 "-I${workspaceFolder}/litgen-model/include/",
@@ -39,13 +39,13 @@
                 "-pedantic",
                 "-fPIC",
                 "${workspaceFolder}/commons/src/*.cpp",
-                "${workspaceFolder}/litgen-model/src/*.cpp",
+                "${workspaceFolder}/litgen-tg/src/*.cpp",
                 "${workspaceFolder}/libs/cpptools_0.1.0.0/bin/libcpptools.a",
                 "-o",
-                "${workspaceFolder}/bin/litgen-model.exe",
+                "${workspaceFolder}/bin/litgen-tg.dbg.exe",
                 "-I${workspaceFolder}/libs/cpptools_0.1.0.0/include/",
                 "-I${workspaceFolder}/commons/include/",
-                "-I${workspaceFolder}/litgen-model/include/",
+                "-I${workspaceFolder}/litgen-tg/include/",
                 "-ltins",
                 "-lpcap",
                 "-pthread",
